Bug 169485 - Cannot insert the image by drag and drop (Windows-only)
Summary: Cannot insert the image by drag and drop (Windows-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: x86-64 (AMD64) Windows (All)
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-11-17 00:03 UTC by nobu
Modified: 2026-01-22 17:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-11-17 00:03:59 UTC
Description:
Cannot insert the image by drag and drop.

Steps to Reproduce:
1. Open new Calc.
2. Insert the image (ex. .jpeg) into the sheet by Drag and Drop.

Actual Results:
3. Cannot insert image.

Expected Results:
3. Can insert image.


Reproducible: Always


User Profile Reset: No

Additional Info:

The following image file formats were found to have issues.
jpg , png , svg , gif

Not reproducible
[2025-11-13]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d2def868cb3ac5a7e538a911e83d7d907a2ec794
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

Not reproducible
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Not reproducible
[2025-11-08]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2025-11-17 00:05:09 UTC
Reproducible
[2025-11-14]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 2 m_a_riosv 2025-11-17 01:15:13 UTC
Reproducible with Calc works in Writer:
Win-x86_64@tb103-1-TDF 	2025-11-16 03:03:52
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 3 m_a_riosv 2025-11-17 01:17:01 UTC
Works with
Version: 25.8.4.0.0+ (X86_64) / LibreOffice Community
Build ID: da83c270853945276a65b9303746a5cb743d04ee
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Takenori Yasuda 2025-11-17 01:48:57 UTC
Reproduced.
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb103-1-TDF/2025-11-16_03.05.54/

Also occurs: .webp
Comment 5 Buovjaga 2025-12-08 07:02:51 UTC
I can repro on Windows, but not on Linux with any of the UIs. Unfortunately we have to wait for some time until the Windows 26.2 bibisect repo will be updated. A server move has to be done first.
Comment 6 Buovjaga 2026-01-15 19:48:18 UTC
Finally we got an updated 26.2 Windows repo, actually a completely new one.

Bibisected to 84c1c49d8699f4106168a524ce774f42ef843b1f
Fix Unicode-dependent format names
Comment 7 Xisco Faulí 2026-01-16 14:36:14 UTC
Increasing importance
Comment 8 Mike Kaganski 2026-01-20 14:04:07 UTC
https://gerrit.libreoffice.org/c/core/+/197670
Comment 9 Commit Notification 2026-01-20 18:38:52 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6bd794a3ab167551d447b10b19e820a65727479e

tdf#169485: properly detect weblinks in FILEGRPDESCRIPTOR

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2026-01-21 14:13:43 UTC
Verified

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 2; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 11 Commit Notification 2026-01-22 17:50:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/7c188ba859b3186bb4598b91e23c39459bf03756

tdf#169485: properly detect weblinks in FILEGRPDESCRIPTOR

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2026-01-22 17:51:11 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-0":

https://git.libreoffice.org/core/commit/368f789545c59412e4b26729adc027995bacb04f

tdf#169485: properly detect weblinks in FILEGRPDESCRIPTOR

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.