tdf#169485: properly detect weblinks in FILEGRPDESCRIPTOR

Commit 84c1c49d8699f4106168a524ce774f42ef843b1f (Fix Unicode-dependent
format names, 2025-11-09) fixed FileGroupDescriptorW (the Windows name
for SotClipboardFormatId::FILEGRPDESCRIPTOR). It turned out that after
it was broken by commit 558956dc811a1f0f07411e348f7081a467bbc3b5 (Drop
UNICODE/_UNICODE defines, 2019-04-04), and therefore never detected at
runtime, the code changed so that now, after its detection was fixed,
it was confused for weblinks (while it can actually contain any kind
of file references).

This change makes the check in lcl_GetDropFormatId more specific, only
returning FILEGRPDESCRIPTOR when the respective file format contains
the wanted weblink.

Change-Id: I869f8b759329b7341c60d5e3da6d77ae8ee96c3e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197670
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 6bd794a3ab167551d447b10b19e820a65727479e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197693
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>